# mcdm

./: .pre-commit-config.yaml  LICENSE  README.md  TOPSIS.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
src/mcdm/: app.py
src/mcdm_app/: Home.py
src/mcdm_app/mcdm/: fuzzy_topsis.py  topsis.py
src/mcdm_app/pages/: Fuzzy TOPSIS.py  TOPSIS.py
tests/: test_fuzzy_numbers.py  test_fuzzy_topsis.py  test_topsis.py
